# old-raytracer

./: CMakeLists.txt  README.md
src/: camera.hxx  color.hxx  floor_texture.hxx  image.hxx  light.hxx  main.cc  object.hxx  point3.hxx  point_light.hxx  ray.hxx  renderer.hxx  scene.hxx  sphere.hxx  texture_material.hxx  uniform_texture.hxx  vector3.hxx  vector3_operations.hxx
